--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/patrickarlt/esri-dev-summit-2024-arcgis-rest-js-org-automation/issues"
   },
   "homepage": "https://github.com/patrickarlt/esri-dev-summit-2024-arcgis-rest-js-org-automation#readme",
-  "workspaces": [
-    "*"
-  ]
+  "devDependencies": {
+    "@types/node": "^20.11.19"
+  }
 }
