--- a/audit-users/package.json
+++ b/audit-users/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "@esri/arcgis-rest-portal": "^4.4.0",
+    "@esri/arcgis-rest-request": "^4.2.0",
+    "commander": "^12.0.0",
+    "dotenv": "^16.4.5",
+    "queue": "^7.0.0"
+  }
 }
